--- a/client/index.html
+++ b/client/index.html
@@ -12,13 +12,13 @@
   <div id="top">
     <div id="containerOne">
       <div class="form">
-        <h1>Please Login</h1>
-        <form action="/users" method="POST" id="userDataForm">
-          <div><input type="text" placeholder="Enter Your First Name :" name="firstname"></div>
-          <div><input type="text" placeholder="Enter Your Last Name :" name="lastname"></div>
+        <h1>Create Your Account</h1>
+        <form action="/users" method="POST" id="userDataForm" onsubmit="handleSubmit()">
+          <div><input type="text" placeholder="Enter Your First Name :" name="firstname" id="firstName"></div>
+          <div><input type="text" placeholder="Enter Your Last Name :" name="lastname" id="lastName"></div>
           <div><input type="email" placeholder="Enter Your email :" name="email" id="email"></div>
-          <div><input type="password" placeholder="Enter Your Password :" name="password" id="password"></div>
-          <div><button type="submit" id="btn">Login</button></div>
+          <div><input type="password" placeholder="Enter Your Password :" name="password" id="password" required></div>
+          <div><button type="submit" id="btn">Create</button></div>
         </form>
       </div>
       <script src="script.js"></script>
