--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,9 @@
 <body>
   <div id="top">
     <div id="containerOne">
+      <div id="container">
+        
+      </div>
       <div class="form">
         <h1>Create Your Account</h1>
         <form id="userDataForm" onsubmit="return handleSubmit()">
