--- a/client/index.html
+++ b/client/index.html
@@ -4,38 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create Your Account</title>
+  <title>Create Account</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
   <div id="top">
     <div id="containerOne">
-      <!-- <div id="container">
-        <div class="list"><a href="">Login</a></div>
-        <div class="list"><a href="">Create new</a></div>
-        <div class="list"><a href="">Get Details</a></div>
-        <div class="list"><a href="">Update Data</a></div>
-      </div> -->
       <nav>
         <div class="wrapper">
           <div class="logo"><a href="#">Admin</a></div>
           <ul class="nav-links">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Create New</a></li>
+            <li><a href="#">Log out</a></li>
+            <!-- <li><a href="#">Create New</a></li> -->
             <li><a href="#">Get Details</a></li>
             <li><a href="#">Update</a></li>
           </ul>
         </div>
       </nav>
       <div class="form">
-        <h1>Create Your Account</h1>
+        <h1>Add New Employee</h1>
         <form id="userDataForm" onsubmit="return handleSubmit()">
-          <div><input type="text" placeholder="Enter Your First Name :" name="firstname" id="firstName"></div>
-          <div><input type="text" placeholder="Enter Your Last Name :" name="lastname" id="lastName"></div>
-          <div><input type="email" placeholder="Enter Your email :" name="email" id="email"></div>
-          <div><input type="password" placeholder="Enter Your Password :" name="password" id="password" required></div>
-          <div><button type="submit" id="btn">Create</button></div>
+          <div><input type="text" placeholder="Enter The First Name :" name="firstname" id="firstName"></div>
+          <div><input type="text" placeholder="Enter The Last Name :" name="lastname" id="lastName"></div>
+          <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
+          <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
+          <div><button type="submit" id="btn">Add</button></div>
         </form>
     </div>
       <script src="script.js"></script>
