--- a/client/index.html
+++ b/client/index.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create Account</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="nav.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login to your account</title>
+    <link rel="stylesheet" href="nav.css">
+    <link rel="html-page" href="admin.html">
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div id="top">
-    <div id="containerOne">
-      <nav>
-        <div class="wrapper">
-          <div class="logo"><a href="#">Admin</a></div>
-          <ul class="nav-links">
-            <li><a href="#">Log out</a></li>
-            <!-- <li><a href="#">Create New</a></li> -->
-            <li><a href="#">Get Details</a></li>
-            <li><a href="#">Update</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="form">
-        <h1>Add New Employee</h1>
-        <form id="userDataForm" onsubmit="return handleSubmit()">
-          <div><input type="text" placeholder="Enter The First Name :" name="firstname" id="firstName"></div>
-          <div><input type="text" placeholder="Enter The Last Name :" name="lastname" id="lastName"></div>
-          <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
-          <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
-          <div><button type="submit" id="btn">Add</button></div>
-        </form>
+    <div>
+        <nav>
+            <div class="wrapper">
+              <div class="logo"><a href="#">Login</a></div>
+              <ul class="nav-links">
+                <!-- <li><a href="#">Log out</a></li> -->
+                <!-- <li><a href="#">Create New</a></li> -->
+                <li><a href="#">Get Details</a></li>
+                <li><a href="#">Update</a></li>
+              </ul>
+            </div>
+          </nav>
+          <div class="form">
+            <h1>Login</h1>
+            <form id="userLogin" onsubmit="return handleLogin()">
+              <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
+              <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
+              <div><button type="submit" id="btn">Login</button></div>
+            </form>
+          </div>
     </div>
-      <script src="script.js"></script>
 </body>
-
 </html>
