--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
               <ul class="nav-links">
                 <!-- <li><a href="#">Log out</a></li> -->
                 <!-- <li><a href="#">Create New</a></li> -->
-                <li><a href="#">Get Details</a></li>
-                <li><a href="#">Update</a></li>
+                <!-- <li><a href="#">Get Details</a></li>
+                <li><a href="#">Update</a></li> -->
               </ul>
             </div>
           </nav>
