--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -8,7 +8,7 @@
     <link rel="html-page" href="index.html">
     <link rel="html-page" href="admin.html">
 </head>
-<body>
+<body onload = "getLoginUserData()">
     <nav>
         <div class="wrapper">
           <div class="logo"><a href="#">Details</a></div>
