--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -21,7 +21,7 @@
         </div>
       </nav>
     <table>
-        <div><button type="submit" id="btn" onsubmit="return details()">Login</button></div>
+        <!-- <div><button type="submit" id="btn" onsubmit="return details()">Login</button></div> -->
       <thead>
         <tr>
           <th>name</th>
