--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -27,7 +27,7 @@
           <th>name</th>
           <th>username</th>
           <th>email</th>
-          <th>password</th>
+          <!-- <th>password</th> -->
         </tr>
       </thead>
       <tbody id="dataContainer"></tbody>
