--- a/client/admin.html
+++ b/client/admin.html
@@ -19,7 +19,7 @@
       <ul class="nav-links">
         <li><a href="login.html">Log out</a></li>
         <!-- <li><a href="#">Create New</a></li> -->
-        <li><a href="#">Get Details</a></li>
+        <li><a href="getDetails.html">Get Details</a></li>
         <li><a href="#">Update</a></li>
       </ul>
     </div>
