--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -20,7 +20,7 @@
 
     td>.in {
       width: 100%;
-      min-width: 200px;
+      min-width: 300px;
       height: 40px;
       background-color: white;
       border: 1px solid red;
@@ -30,9 +30,10 @@
 
     button.btn {
       margin: 0px auto;
-      width: 150px;
-      height: 30px;
-      border: 0px;
+      width: 100%;
+      min-width: 100px;
+      height: 40px;
+      border: 2px solid red;
       border-radius: 10px;
       background-color: greenyellow;
     }
@@ -46,7 +47,7 @@
       <div class="logo"><a href="#">Details</a></div>
       <ul class="nav-links">
         <li><a href="#">Log out</a></li>
-        <!-- <li><a href="#">Create New</a></li> -->
+        <li><a href="admin.html">Create New</a></li>
         <!-- <li><a href="#">Get Details</a></li> -->
         <li><a href="#">Update</a></li>
       </ul>
@@ -56,8 +57,8 @@
     <!-- <div><button type="submit" id="btn" onsubmit="return details()">Login</button></div> -->
     <thead>
       <tr>
-        <th>name</th>
-        <th>username</th>
+        <th>First-Name</th>
+        <th>Last-Name</th>
         <th>email</th>
         <!-- <th>password</th> -->
       </tr>
