--- a/client/admin.html
+++ b/client/admin.html
@@ -26,7 +26,7 @@
   </nav>
   <div class="form">
     <h1>Add New Employee</h1>
-    <form id="userDataForm" onsubmit="return addUser()">
+    <form id="userDataForm" onsubmit="return handleSubmit(event)">
       <div><input type="text" placeholder="Enter The First Name :" name="firstname" id="firstName"></div>
       <div><input type="text" placeholder="Enter The Last Name :" name="lastname" id="lastName"></div>
       <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
