--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -17,6 +17,9 @@
       align-items: center;
     }
 
+    body {
+      background-color: rgb(84, 84, 86);
+    }
 
     td>.in {
       width: 100%;
