--- a/client/forgot-password.html
+++ b/client/forgot-password.html
@@ -1,12 +1,10 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
-
-    <title>CodePen - Animated Login Form using Html &amp; CSS Only</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Employee &amp; Login</title>
 
     <link rel="stylesheet" href="./style.css">
     <style>
@@ -204,7 +202,7 @@
 
 </head>
 
-<body> <!-- partial:index.partial.html -->
+<body>
 
     <section> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
@@ -250,7 +248,7 @@
 
                     <div class="inputBox">
 
-                        <input type="email" required> <i>email</i>
+                        <input type="email" required aria-label="email"> <i>email</i>
 
 
                     </div>
@@ -267,8 +265,6 @@
 
             </div>
 
-    </section> <!-- partial -->
-
-</body>
+    </section>
 
 </html>
