--- a/client/forgot-password.html
+++ b/client/forgot-password.html
@@ -244,18 +244,18 @@
 
                 <h2>Reset Password</h2>
 
-                <div class="form">
+                <div class="form" id="forgot-password">
 
                     <div class="inputBox">
 
-                        <input type="email" required aria-label="email"> <i>email</i>
+                        <input type="email" required aria-label="email" id="email"> <i>email</i>
 
 
                     </div>
 
                     <div class="inputBox">
 
-                        <input type="submit" value="Reset">
+                        <input type="submit" value="Reset" onsubmit="return forgotpassword(event)">
 
                     </div>
 
