--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="nav.css">
   <link rel="html-page" href="admin.html">
   <link rel="stylesheet" href="style.css">
+  <link rel="html-page" href="forgot-password.html">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
       <div class="wrapper">
         <div class="logo"><a href="#">Login</a></div>
         <ul class="nav-links">
-          <!-- <li><a href="#">Log out</a></li> -->
+          <li><a href="forgot-password.html">Employee login</a></li>
           <!-- <li><a href="#">Create New</a></li> -->
           <!-- <li><a href="#">Get Details</a></li>
                 <li><a href="#">Update</a></li> -->
