--- a/client/forgot-password.html
+++ b/client/forgot-password.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee &amp; Login</title>
-
-    <link rel="stylesheet" href="./style.css">
+    <title>Employee Login</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
@@ -43,7 +42,7 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(#000, rgb(255, 0, 0), #000);
-            animation: animate 5s linear infinite;
+            animation: animate 7s linear infinite;
         }
 
         @keyframes animate {
@@ -67,13 +66,13 @@
         }
 
         section span:hover {
-            background: rgb(255, 0, 0);
+            background: rgb(70, 70, 70);
             transition: 0s;
         }
 
         section .signin {
             position: absolute;
-            width: 400px;
+            width: 30vw;
             background: #222;
             z-index: 1000;
             display: flex;
@@ -252,26 +251,28 @@
 
                 <h2>Reset Password</h2>
 
-                <div class="form" id="forgot-password">
-
+                <!-- <div class="form" id="forgot-password">
                     <div class="inputBox">
-
                         <input type="email" required aria-label="email" id="email"> <i>email</i>
-
-
                     </div>
-
                     <div class="inputBox">
-
-                        <input type="submit" value="Reset" onsubmit="return forgotpassword(event)">
-
+                        <input type="password" required aria-label="password" id="password"> <i>password</i>
                     </div>
+                    <div class="inputBox">
+                        <input type="submit" value="Reset" onsubmit="return forgotpassword(event)">
+                    </div>
+                </div> -->
 
 
-
-                </div>
+                <form id="forgot-password" onsubmit="return handleForgot(event)">
+                    <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
+                    <!-- <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div> -->
+                    <div><button type="submit" id="btn">Submit</button></div>
+                </form>
 
             </div>
+
+        </div>
 
     </section>
 
