--- a/client/forgot-password.html
+++ b/client/forgot-password.html
@@ -266,7 +266,7 @@
 
                 <form id="forgot-password" onsubmit="return handleForgot(event)">
                     <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
-                    <!-- <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div> -->
+                    <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
                     <div><button type="submit" id="btn">Submit</button></div>
                 </form>
 
@@ -275,5 +275,7 @@
         </div>
 
     </section>
+<script src="script.js"></script>
+</body>
 
 </html>
