--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
       <div class="wrapper">
         <div class="logo"><a href="#">Login</a></div>
         <ul class="nav-links">
-          <li><a href="forgot-password.html">Employee login</a></li>
+          <li><a href="forgot-password.html">Forgot Password</a></li>
           <!-- <li><a href="#">Create New</a></li> -->
           <!-- <li><a href="#">Get Details</a></li>
                 <li><a href="#">Update</a></li> -->
