--- a/client/reset-password.html
+++ b/client/reset-password.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>forgot password</title>
+    <title>Reset password</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
@@ -249,7 +249,7 @@
 
             <div class="content">
 
-                <h2>Forgot Password</h2>
+                <h2>Reset Password</h2>
 
                 <!-- <div class="form" id="forgot-password">
                     <div class="inputBox">
@@ -264,9 +264,9 @@
                 </div> -->
 
 
-                <form id="forgot-password" onsubmit="return handleForgot(event)">
-                    <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
-                    <!-- <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div> -->
+                <form id="forgot-password" onsubmit="return handlereset(event)">
+                    <!-- <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div> -->
+                    <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
                     <div><button type="submit" id="btn">Submit</button></div>
                 </form>
 
