--- a/client/forgot-password.html
+++ b/client/forgot-password.html
@@ -235,7 +235,6 @@
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
-        <span></span> <span></span> <span></span> <span></span> <span></span><span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
@@ -243,27 +242,26 @@
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
         <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
-        <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span> <span></span>
+        <span></span> <span></span>
 
         <div class="signin">
 
             <div class="content">
 
                 <h2>Forgot Password</h2>
-
-                <!-- <div class="form" id="forgot-password">
-                    <div class="inputBox">
-                        <input type="email" required aria-label="email" id="email"> <i>email</i>
-                    </div>
-                    <div class="inputBox">
-                        <input type="password" required aria-label="password" id="password"> <i>password</i>
-                    </div>
-                    <div class="inputBox">
-                        <input type="submit" value="Reset" onsubmit="return forgotpassword(event)">
-                    </div>
-                </div> -->
-
-
                 <form id="forgot-password" onsubmit="return handleForgot(event)">
                     <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
                     <!-- <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div> -->
@@ -275,7 +273,7 @@
         </div>
 
     </section>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
