--- a/client/reset-password.html
+++ b/client/reset-password.html
@@ -250,21 +250,7 @@
             <div class="content">
 
                 <h2>Reset Password</h2>
-
-                <!-- <div class="form" id="forgot-password">
-                    <div class="inputBox">
-                        <input type="email" required aria-label="email" id="email"> <i>email</i>
-                    </div>
-                    <div class="inputBox">
-                        <input type="password" required aria-label="password" id="password"> <i>password</i>
-                    </div>
-                    <div class="inputBox">
-                        <input type="submit" value="Reset" onsubmit="return forgotpassword(event)">
-                    </div>
-                </div> -->
-
-
-                <form id="forgot-password" onsubmit="return handlereset(event)">
+                <form id="reset-password" onsubmit="return handlereset(event)">
                     <!-- <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div> -->
                     <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
                     <div><button type="submit" id="btn">Submit</button></div>
