--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
         <div class="logo"><a href="#">Login</a></div>
         <ul class="nav-links">
           <li><a href="forgot-password.html">Forgot Password</a></li>
-          <!-- <li><a href="#">Create New</a></li> -->
+          <li><a href="#">Employee login</a></li>
           <!-- <li><a href="#">Get Details</a></li>
                 <li><a href="#">Update</a></li> -->
         </ul>
