--- a/client/employee.html
+++ b/client/employee.html
@@ -23,8 +23,8 @@
             </div>
         </nav>
         <div class="form">
-            <h1>Login</h1>
-            <form id="userLogin" onsubmit="return employee(event)">
+            <h1>Employee Login</h1>
+            <form id="userLogin" onsubmit="return login(event)">
                 <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
                 <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required>
                 </div>
