--- a/client/index.html
+++ b/client/index.html
@@ -18,14 +18,14 @@
         <div class="logo"><a href="#">Login</a></div>
         <ul class="nav-links">
           <li><a href="forgot-password.html">Forgot Password</a></li>
-          <li><a href="#">Employee login</a></li>
+          <li><a href="employee.html">Employee login</a></li>
           <!-- <li><a href="#">Get Details</a></li>
                 <li><a href="#">Update</a></li> -->
         </ul>
       </div>
     </nav>
     <div class="form">
-      <h1>Login</h1>
+      <h1>Admin Login</h1>
       <form id="userLogin" onsubmit="return login(event)">
         <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
         <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
