--- a/client/reset-password.html
+++ b/client/reset-password.html
@@ -250,7 +250,7 @@
             <div class="content">
 
                 <h2>Reset Password</h2>
-                <form id="reset-password" onsubmit="return handlereset(event)">
+                <form id="reset-password" onsubmit="return handleReset(event)">
                     <!-- <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div> -->
                     <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div>
                     <div><button type="submit" id="btn">Submit</button></div>
