--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -43,7 +43,7 @@
   </style>
 </head>
 
-<body onload="getLoginUserData()">
+<body onload="getUsersData()">
   <nav>
     <div class="wrapper">
       <div class="logo"><a href="#">Details</a></div>
