--- a/client/userPage.html
+++ b/client/userPage.html
@@ -16,10 +16,14 @@
             <input type="text" placeholder="lastname" id="lastName">
             <input type="text" placeholder="email" id="email">
         </div>
-        <div class="edit">
-            <div><img src="images/pencil (1).png" alt="" width="50px" height="50px"></div>
-            <div><img src="images/bin.png" alt="" width="50px" height="50px"></div>
-        </div>
+        <!-- <div class="edit">
+            <div><img src="images/pencil (1).png" alt="" width="50px" height="50px" onclick="handledit()"></div>
+            <div><img src="images/bin.png" alt="" width="50px" height="50px" onclick="handleremove()"></div>
+        </div> -->
+    </div>
+    <div class="edit">
+        <div><img src="images/pencil (1).png" alt="" width="50px" height="50px" onclick="handledit(event)"></div>
+        <div><img src="images/bin.png" alt="" width="50px" height="50px" onclick="handleremove(event)"></div>
     </div>
     <script src="script.js"></script>
 </body>
