--- a/client/admin.html
+++ b/client/admin.html
@@ -30,7 +30,7 @@
       <div><input type="text" placeholder="Enter The First Name :" name="firstname" id="firstName"></div>
       <div><input type="text" placeholder="Enter The Last Name :" name="lastname" id="lastName"></div>
       <div><input type="email" placeholder="Enter The email :" name="email" id="email"></div>
-      <!-- <div><input type="password" placeholder="Enter The Password :" name="password" id="password" required></div> -->
+      <div><input type="file" id="imageUpload" name="image" accept="image/*" id="image" placeholder="image"></div>
       <div><button type="submit" id="btn">Add</button></div>
     </form>
   </div>
