--- a/client/userPage.html
+++ b/client/userPage.html
@@ -14,7 +14,7 @@
         <div class="details">
             <input type="text" placeholder="firstname" id="firstName">
             <input type="text" placeholder="lastname" id="lastName">
-            <input type="text" placeholder="email" id="email">
+            <input type="text" placeholder="email" id="email" disabled>
         </div>
         <!-- <div class="edit">
             <div><img src="images/pencil (1).png" alt="" width="50px" height="50px" onclick="handledit()"></div>
