--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -48,10 +48,9 @@
     <div class="wrapper">
       <div class="logo"><a href="#">Details</a></div>
       <ul class="nav-links">
+        <li><input type="text" placeholder="search" onchange="finduser()"></li>
         <li><a href="#">Log out</a></li>
         <li><a href="admin.html">Create New</a></li>
-        <!-- <li><a href="#">Get Details</a></li> -->
-        <li><a href="#">Update</a></li>
       </ul>
     </div>
   </nav>
