--- a/client/userPage.html
+++ b/client/userPage.html
@@ -19,7 +19,7 @@
     </div>
     <div class="edit">
         <div><img src="images/pencil (1).png" alt="" width="50px" height="50px" onclick="handledit(event)"></div>
-        <div><img src="images/bin.png" alt="" width="50px" height="50px" onclick="handleremove(event)"></div>
+        <div><img src="images/bin.png" alt="" width="50px" height="50px" onclick="handledelete(event)"></div>
     </div>
     <script src="script.js"></script>
 </body>
