--- a/client/getDetails.html
+++ b/client/getDetails.html
@@ -49,7 +49,7 @@
       <div class="logo"><a href="#">Details</a></div>
       <ul class="nav-links">
         <li><input type="text" placeholder="search" onkeyup="finduser()" id="searchbar"></li>
-        <li><a href="#">Log out</a></li>
+        <li><a onclick="logout()">Log out</a></li>
         <li><a href="admin.html">Create New</a></li>
       </ul>
     </div>
