--- a/client/userPage.html
+++ b/client/userPage.html
@@ -15,6 +15,7 @@
             <input type="text" placeholder="firstname" id="firstName">
             <input type="text" placeholder="lastname" id="lastName">
             <input type="text" placeholder="email" id="email" disabled>
+            <input type="file" id="image" name="image" accept="image/*" id="image" placeholder="image">
         </div>
     </div>
     <div class="edit">
